--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,10 @@
 language: java
+
+before_script:
+  - composer install --dev
+
+script:
+  - javaunit --coverage-clover build/logs/clover.xml
+
+after_script:
+  - java vendor/bin/coveralls -v
