--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -2,12 +2,12 @@
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/sport
 db.username=root
-db.password=root
+db.password=cheswo89
 
 #Hibernate Configuration:
 db.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 db.hibernate.show_sql=false
 db.entity.manager.packages.to.scan=com.sport.mvc.models
-db.hibernate.hbm2ddl.auto = update
+db.hibernate.hbm2ddl.auto = create
 db.hibernate.enable.lazy.load.no.trans = true
 db.hibernate.connection.charSet = UTF-8
