--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <log4j2.version>2.1</log4j2.version>
         <jstl.version>1.2</jstl.version>
         <servlet.api.version>3.1.0</servlet.api.version>
+        <hibernate.version>5.2.3.Final</hibernate.version>
     </properties>
 
     <dependencies>
@@ -123,7 +124,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>4.2.0.Final</version>
+            <version>${hibernate.version}</version>
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
