--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -8,6 +8,6 @@ db.password=cheswo89
 db.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 db.hibernate.show_sql=false
 db.entity.manager.packages.to.scan=com.sport.mvc.models
-db.hibernate.hbm2ddl.auto = create
+db.hibernate.hbm2ddl.auto = update
 db.hibernate.enable.lazy.load.no.trans = true
 db.hibernate.connection.charSet = UTF-8
