--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -2,7 +2,7 @@
 db.driver = com.mysql.jdbc.Driver
 db.url = jdbc:mysql://localhost:3306/sport
 db.username = root
-db.password = 1
+db.password = root
 
 #Hibernate Configuration:
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
@@ -10,3 +10,6 @@ hibernate.show_sql = false
 packagesToScan = com.sport.mvc.models
 hibernate.hbm2ddl.auto = update
 hibernate.enable_lazy_load_no_trans = true
+hibernate.connection.Charset = UTF-8
+hibernate.connection.CharacterEncoding = UTF-8
+hibernate.connection.Useunicode = true
