--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -10,3 +10,6 @@ hibernate.show_sql = false
 packagesToScan = com.sport.mvc.models
 hibernate.hbm2ddl.auto = update
 hibernate.enable_lazy_load_no_trans = true
+hibernate.connection.Charset = UTF-8
+hibernate.connection.CharacterEncoding = UTF-8
+hibernate.connection.Useunicode = true
