--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,12 +1,11 @@
 #DB properties:
 db.driver = com.mysql.jdbc.Driver
-db.url = jdbc:mysql://localhost:3306/sport
+db.url = jdbc:mysql://localhost:3306/sport?useUnicode=true&amp;characterEncoding=UTF-8
 db.username = root
 db.password = root
-
 #Hibernate Configuration:
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
-hibernate.show_sql = false
+hibernate.show_sql = true
 packagesToScan = com.sport.mvc.models
 hibernate.hbm2ddl.auto = update
 hibernate.enable_lazy_load_no_trans = true
