--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 #DB properties:
 db.driver = com.mysql.jdbc.Driver
-db.url = jdbc:mysql://localhost:3306/sport?useUnicode=true&amp;characterEncoding=UTF-8useSSL=false~
+db.url = jdbc:mysql://localhost:3306/sport?useUnicode=true&amp;characterEncoding=UTF-8
 db.username = root
 db.password = root
 #Hibernate Configuration:
